--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://randychebro.github.io/react-sneakers/",
+  "homepage": "https://randychebro.github.io/react-sneakers",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
